# leptos-kotiboksi

./: .gitignore  Cargo.toml  Dockerfile  build.rs  deploy.org  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: update-nixdots.yaml
migrations/: 20240927191030_guestbook.sql
src/: css.rs  db.rs  lib.rs  main.rs
src/app/: guestbook.rs  home.rs  mod.rs  nav.rs  radio.rs
style/: font.scss  guestbook.scss  main.scss  misc.scss  nav.scss  radio.scss  textpart.scss
