[package]
name = "kotiboksi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
console_error_panic_hook = "0.1"
http = { version = "1.0.0", optional = true }
leptos = { version = "0.7", features = ["nightly"] }
leptos_meta = { version = "0.7" }
leptos_actix = { version = "0.7", optional = true }
leptos_router = { version = "0.7", features = ["nightly"] }
wasm-bindgen = "=0.2.100"
turf = "0.9.5"
# cfg-if = "1.0.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"], optional = true }
serde = { version = "1.0.210", features = ["derive"] }

[features]
hydrate = ["leptos/hydrate"]
csr = ["leptos/csr"]
ssr = [
  "dep:actix-files",
  "dep:actix-web",
  "dep:leptos_actix",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "sqlx"
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.wasm-debug]
inherits = "dev"
opt-level = 's'
panic = "abort"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[package.metadata.turf.class_names]
template = "<original_name>"

[package.metadata.leptos]
output-name = "kotiboksi"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "static"
watch-additional-files = ["style", "style/global"]

site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "PROD"

bin-target-triple = "x86_64-unknown-linux-gnu"
bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false

lib-profile-release = "wasm-release"
lib-profile-dev = "wasm-debug"
lib-cargo-args = ["-Z", "build-std=std,panic_abort,core,alloc", "-Z", "build-std-features=panic_immediate_abort"]
